--- a/angular-src/src/index.html
+++ b/angular-src/src/index.html
@@ -2,8 +2,17 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>MEAN Auth App</title>
-   <link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css">
+   <title>MEAN Auth App</title>
+   <!--<link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css">-->
+   <!-- Bootstrap -->
+     <!-- Material Design fonts -->
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/icon?family=Material+Icons">
+
+  <!-- Bootstrap -->
+  <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/bootstrap.material-design/4.0.2/bootstrap-material-design.min.css" rel="stylesheet">
+  
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
